--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,9 +1,10 @@
-@import url('./header.css');
-@import url('./footer.css');
-@import url('./scroll-up.css');
-@import url('./modal.css');
-@import url('./loader.css');
-@import url('./fonts.css');
+@import url('./total-css/header.css');
+@import url('./total-css/footer.css');
+@import url('./total-css/scroll-up.css');
+@import url('./total-css/modal.css');
+@import url('./total-css/loader.css');
+@import url('./total-css/fonts.css');
+@import url('./total-css/support-ukraine.css');
 
 :root {
   --body-background-color: #f6f6f6;
