--- a/src/css/total-css/shop-list-di.css
+++ b/src/css/total-css/shop-list-di.css
@@ -1,4 +1,7 @@
 
+h1 {
+  margin: 0;
+}
 
 
 .shopping-list{
@@ -16,6 +19,7 @@
 
 .shop-background{
     margin-top: 120px;
+    margin-bottom: 100px;
 
     font-size: 14px;
     text-align: center;
@@ -26,9 +30,25 @@
     flex-direction: column;
  
 }
+@media screen and (min-width: 768px) {
+  .shop-background {
 
-.shop-text-backgr{
- 
-    max-width: 244px;
-     opacity: 60%;
+    margin: 0 auto;
+    margin-top: 140px;
+    margin-bottom: 100px;
+    
+  }
+}
+
+
+
+.shop-text-backgr {
+  max-width: 244px;
+  opacity: 60%;
+}
+
+@media screen and (min-width: 768px) {
+  .shop-text-backgr {
+    max-width: 320px;
+  }
 }
