--- a/src/css/index.css
+++ b/src/css/index.css
@@ -5,6 +5,8 @@
 @import url('./total-css/loader.css');
 @import url('./total-css/fonts.css');
 @import url('./total-css/support-ukraine.css');
+@import url('./total-css/category-books.css');
+@import url('./total-css/best-sellers.css');
 
 :root {
   --body-background-color: #f6f6f6;
