--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,6 +1,6 @@
 @import url('./total-css/header.css');
 @import url('./total-css/footer.css');
-@import url('./total-css/scroll-up.css');
+@import url('./total-css/scroll-up-btn.css');
 @import url('./total-css/modal.css');
 @import url('./total-css/loader.css');
 @import url('./total-css/fonts.css');
