--- a/src/css/index.css
+++ b/src/css/index.css
@@ -34,6 +34,22 @@ body {
   transition: 0.5s;
 }
 
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  /* min-width: 100%; */
+  height: auto;
+  display: block;
+}
+
 .container {
   position: relative;
   max-width: 375px;
